service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  type: LoadBalancer
  selector:
    app: nodejspod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
