ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nodejs.mannan18.ml
    http:
        paths:
        - pathType: Prefix
          path: "/nodejs"
          backend:
            service:
              name: mysvc
              port:
                number: 80
